@@ -207,3 +207,5 @@
 20071218 audio2tape.c,listbasic.c,rzxcheck.c,rzxdump.c,snap2tzx.c,snapconv.c,
 	 tape2wav.c,tapeconv.c,tzxlist.c,utils.c: don't include mman.h (Stuart).
 20071219 rzxtool.c: fix build without glib (Stuart).
+20071219 Makefile.am,configure.in: fix build on Win32 with libaudiofile and/or
+	 libgcrypt (Stuart).
